Giving margin bottom
Giving margin bottom so in mobile it  looks good

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,7 +53,7 @@
     <title>Inspira</title>
   </head>
   <body class="bg-zinc-950">
-    <nav class="w-full nav-canvas text-white fixed top-0 left-0 z-50">
+    <nav class="w-full nav-canvas text-white fixed mb-10 top-0 left-0 z-50">
       <div class="container mx-auto px-4 sm:px-6 py-4">
         <div
           class="flex flex-col sm:flex-row items-center justify-between gap-4 sm:gap-0"
