This will give some padding
This will add padding so in mobile nav dose not overlap anything

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,3 +13,8 @@ img {
   max-width: 100%;
   height: auto;
 }
+@media (max-width: 640px) {  /* Tailwind 'sm' breakpoint */
+  body {
+    padding-top: 80px; /* Adjust based on your navbar height */
+  }
+}
